# edi_robot_control

./: (example)edi_robot_control.humble.repos.txt  .gitignore  README.md
edi_robot_control/: CMakeLists.txt  README.md  package.xml
edi_robot_control/edi_robot_control/include/edi_robot_control/: edi_pick_and_place.h
edi_robot_control/edi_robot_control/src/: edi_pick_and_place.cpp  object_server.cpp  object_server_client.cpp
edi_robot_control/edi_robot_msgs/: CMakeLists.txt
edi_robot_control/edi_robot_msgs/msg/: ObjectDesc.msg
edi_robot_control/edi_robot_msgs/srv/: GetCommand.srv  SemanticFindObject.srv
edi_robot_control/launch/: other_test.launch.py  test.launch.py
edi_robot_control/manipulator_interface/: CMakeLists.txt
edi_robot_control/manipulator_interface/src/: manipulator_interface.cpp
edi_robot_control/scripts/: test_server.py  test_socket.py  test_transform.py
edi_robot_msgs/: README.md  package.xml
edi_robot_msgs/msg/: ActionDesc.msg  Embedding.msg
edi_robot_msgs/srv/: GetActionList.srv  GetGraspPose.srv  GetObjectEmbedding.srv  NamedObjectPose.srv  NamedObjectPoseStamped.srv
manipulator_interface/: package.xml
manipulator_interface/include/manipulator_interface/: manipulator_interface.h
